k8s.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: ${PROJECT_ENV}-${PROJECT_NAME}
  labels:
    app: ${PROJECT_ENV}-${PROJECT_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_ENV}-${PROJECT_NAME}
  template:
    metadata:
      labels:
        app: ${PROJECT_ENV}-${PROJECT_NAME}
    spec:
      containers:
        - name: ${PROJECT_ENV}-${PROJECT_NAME}
          image: eu.gcr.io/${GOOGLE_PROJECT_ID}/${PROJECT_NAME}:${CIRCLE_SHA1}
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: ${PROJECT_ENV}-${PROJECT_NAME}-svc
spec:
  selector:
    app: ${PROJECT_ENV}-${PROJECT_NAME}
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: ${PROJECT_ENV}-${PROJECT_NAME}-port
  type: NodePort
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ${PROJECT_ENV}-${PROJECT_NAME}-ingress
spec:
  tls:
  - secretName: ${PROJECT_ENV}-${PROJECT_NAME}-tls
  backend:
    serviceName: ${PROJECT_ENV}-${PROJECT_NAME}-svc
    servicePort: 80
